--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ footer{
 }
 
 
-
 /*Your Code Here*/
 /* PLEASE DO NOT REMOVE MY COMMENTS.  THEY HELP US HELP YOU DEBUG. */
 
@@ -112,25 +111,29 @@ nav a:hover, nav a:focus{
 }
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
-.skip{
+.skip a{
   position: absolute;
   top: -40px;
   display: none;
 }
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
-.skip:focus{
+.skip a:focus{
   top: 20px;
   display: block;
 }
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
 :focus{
-  border: 2px solid
+  border: 2px solid;
 }
 
 /* Step 4: Write selector/rule property to style the container */
-
+.container{
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  gap: 15px;
+}
 
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
@@ -150,11 +153,24 @@ first div in the grid  and place it in the grid. */
 
 
   /* Step 9: Write the selector/rule property to style the nav element */
+  nav{
+    text-align: right;
+    padding: 30px 0px;
 
+  }
  
   /* Step 10: Write the selector/rule property to update the .container class */
-
+  .container{
+    display: grid;
+    grid-template-columns: 50px auto 500px auto 50px;
+  }
 
   /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
+  .about, .clients, .method-image, .contact-image{
+    grid-column: 3 / 2
+  } 
 
+  .method, .contact, .about-image, .clients-image{
+    grid-column: 2 / 2
+  }
 
