--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ footer{
 }
 
 
+
 /*Your Code Here*/
 /* PLEASE DO NOT REMOVE MY COMMENTS.  THEY HELP US HELP YOU DEBUG. */
 
@@ -114,13 +115,11 @@ nav a:hover, nav a:focus{
 .skip a{
   position: absolute;
   top: -40px;
-  display: none;
 }
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
 .skip a:focus{
   top: 20px;
-  display: block;
 }
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
@@ -136,21 +135,75 @@ nav a:hover, nav a:focus{
 }
 
 /* Step 5: Write selector/rule property to add the background image to the 
-first div in the grid  and place it in the grid. */
-
+first div in the grid and place it in the grid. */
+.container div:first-child{
+  grid-column: 1 / -1;
+  min-height: 500px;
+  background-image: url("../image/header.jpg");
+}
 
 
 /* Steps 6 and 7: Write the selector/rule properties to add place the next elements in the next
  four rows in the grid. */
 
       /*This will be a lot of rules.... but be strategic and combine seletors*/
+.about{
+  grid-column: 2 / 3;
+  grid-row: 2
+}
 
+.method{
+  grid-column: 2 / 3;
+  grid-row: 3
+}
 
- /* Step 8: Write the selector/rule property to style the .text-block class. */
+.clients{
+  grid-column: 2 / 3;
+  grid-row: 4;
+}
 
+.contact{
+  grid-column: 2 / 3;
+  grid-row: 5;
+}
+
+.about-image {
+  grid-column: 1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 2;
+}
+
+.method-image {
+  grid-column: 1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 3;
+}
+
+.clients-image {
+  grid-column: 1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 4;
+}
+
+.contact-image {
+  grid-column: 1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 5;
+}
+
+/* Step 8: Write the selector/rule property to style the .text-block class. */
+.text-block{
+  text-align: center;
+  max-height: 250px;
+  overflow: scroll;
+}
 
 /* Add your media query here */
-
+@media(min-width: 800px){
 
   /* Step 9: Write the selector/rule property to style the nav element */
   nav{
@@ -167,10 +220,10 @@ first div in the grid  and place it in the grid. */
 
   /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
   .about, .clients, .method-image, .contact-image{
-    grid-column: 3 / 2
+    grid-column: 3 / 5
   } 
 
   .method, .contact, .about-image, .clients-image{
-    grid-column: 2 / 2
+    grid-column: 2 / 4
   }
-
+}
