--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ first div in the grid and place it in the grid. */
 .container div: first-child{
   grid-column: 1 / -1;
   min-height: 500px;
-  background-image: url("../image/header.jpg");
+  background-image: url("../images/header.jpg");
 }
 
 
