--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,12 @@ nav a:hover, nav a:focus{
 first div in the grid and place it in the grid. */
 .container div: first-child{
   background-image: url("../images/header.jpg");
-  grid-column: 1 / -1;
   min-height: 500px;
+  background-attachment: fixed; /* Parallax effect */     
+  background-position: center;  /* Parallax effect */
+  background-repeat: no-repeat; /* Parallax effect */
+  background-size: cover;       /* Parallax effect */
+  grid-column: 1 / -1;
 }
 
 
