--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,10 @@ nav a:hover, nav a:focus{
   gap: 15px;
 }
 
+.container img{
+  width: 100%
+}
+
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid and place it in the grid. */
 .container div: first-child{
