--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ first div in the grid and place it in the grid. */
 
 /* Step 8: Write the selector/rule property to style the .text-block class. */
 .text-block{
-  text-align: center;
+  align-self: center;
   max-height: 250px;
   overflow: scroll;
 }
