--- a/css/style.css
+++ b/css/style.css
@@ -135,12 +135,12 @@ nav a:hover, nav a:focus{
 }
 
 .container img{
-  width: 100%
+  width: 100%;
 }
 
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid and place it in the grid. */
-.container div: first-child{
+.container div:first-child{
   background-image: url("../images/header.jpg");
   min-height: 500px;
   background-attachment: fixed; /* Parallax effect */     
